--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--  buttons -->
         <div id="buttons" class="cd-section">
           <div class="title">
-            <h3>Fichiers
+            <h3>Fichiers :
               <br>
               <small>Convocation BTS</small>
             </h3>
@@ -57,13 +57,14 @@
         </div>
         <div id="buttons" class="cd-section">
           <div class="title">
-            <h3>Fichiers
+            <h3>Fichiers :
               <br>
-              <small>Cahier des charges</small>
-              <small>Schema réseau</small>
-              <small>Dossier du PPE</small>
-              <small><a href="https://github.com/Worldten/Application_PPE">Code</a></small>
-              <small>DESCRIPTION D'UNE SITUATION PROFESSIONNEL</small>
+              <small>Cahier des charges : <a
+                  href="PPE 1 et 2- Fiche Descriptive  gestion agence immobiliere.pdf">Version PDF</a></small><br>
+              <small>Schema réseau : <a href="GSB-Epsi.pdf">Version PDF</a></small><br>
+              <small>Dossier du PPE : <a href="Rapport_PPE3.pdf">Version PDF</a></small><br>
+              <small><a href="https://github.com/Worldten/Application_PPE">Code</a></small><br>
+              <small>DESCRIPTION D'UNE SITUATION PROFESSIONNEL</small><br>
             </h3>
           </div>
         </div>
@@ -74,13 +75,14 @@
         </div>
         <div id="buttons" class="cd-section">
           <div class="title">
-            <h3>Fichiers
+            <h3>Fichiers :
               <br>
-              <small>Cahier des charges</small>
-              <small>Schema réseau</small>
-              <small>Dossier du PPE</small>
-              <small><a href="https://github.com/Worldten/PPE_Site">Code</a></small>
-              <small>DESCRIPTION D'UNE SITUATION PROFESSIONNEL</small>
+              <small>Cahier des charges : <a
+                  href="PPE 1 et 2- Fiche Descriptive  gestion agence immobiliere.pdf">Version PDF</a></small><br>
+              <small>Schema réseau : <a href="GSB-Epsi.pdf">Version PDF</a></small><br>
+              <small>Dossier du PPE : <a href="Rapport_PPE3.pdf">Version PDF</a></small><br>
+              <small><a href="https://github.com/Worldten/PPE_Site">Code</a></small><br>
+              <small>DESCRIPTION D'UNE SITUATION PROFESSIONNEL</small><br>
             </h3>
           </div>
         </div>
