--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="title">
             <h3>Fichiers :
               <br>
-              <small>Convocation BTS</small>
+              <small>Convocation BTS : <a href="Convocation.pdf">Version PDF</a></small>
             </h3>
           </div>
         </div>
@@ -63,8 +63,9 @@
                   href="PPE 1 et 2- Fiche Descriptive  gestion agence immobiliere.pdf">Version PDF</a></small><br>
               <small>Schema réseau : <a href="GSB-Epsi.pdf">Version PDF</a></small><br>
               <small>Dossier du PPE : <a href="Rapport_PPE3.pdf">Version PDF</a></small><br>
-              <small><a href="https://github.com/Worldten/Application_PPE">Code</a></small><br>
-              <small>DESCRIPTION D'UNE SITUATION PROFESSIONNEL</small><br>
+              <small>Code : <a href="https://github.com/Worldten/Application_PPE">Lien github application</a>, <a
+                  href="https://github.com/Worldten/Application_PPE_API">Lien github API</a></small><br>
+              <small>Description d'une situation professionnel : <a href="SituatioPro3.pdf">Version PDF</a></small><br>
             </h3>
           </div>
         </div>
@@ -81,8 +82,9 @@
                   href="PPE 1 et 2- Fiche Descriptive  gestion agence immobiliere.pdf">Version PDF</a></small><br>
               <small>Schema réseau : <a href="GSB-Epsi.pdf">Version PDF</a></small><br>
               <small>Dossier du PPE : <a href="Rapport_PPE3.pdf">Version PDF</a></small><br>
-              <small><a href="https://github.com/Worldten/PPE_Site">Code</a></small><br>
-              <small>DESCRIPTION D'UNE SITUATION PROFESSIONNEL</small><br>
+              <small>Code : <a href="https://github.com/Worldten/PPE_Site">Lien github site administrateur</a>, <a
+                  href="https://github.com/Worldten/Application_PPE_API">Lien github API</a></small><br>
+              <small>Description d'une situation professionnel : <a href="SituationPro4.pdf">Version PDF</a></small><br>
             </h3>
           </div>
         </div>
@@ -96,8 +98,8 @@
         <div class="title">
           <h3>Fichiers
             <br>
-            <small>Attestation de stage</small>
-            <small>Rapport de stage</small>
+            <small>Attestation de stage : <a href="Attestation_Redfox.pdf">Version PDF</a></small><br>
+            <small>Rapport de stage : <a href="Rapport_Stage_ThomasZimmermann.pdf">Version PDF</a></small>
           </h3>
         </div>
       </div>
@@ -110,13 +112,15 @@
         <div class="title">
           <h3>Fichiers
             <br>
-            <small>Attestation de stage</small>
-            <small>Rapport de stage</small>
+            <small>Attestation de stage : <a href="Attestation_Edaic.pdf">Version PDF</a></small><br>
+            <small>Rapport de stage : <a href="Stage_ZIMMERMANN_Thomas.pdf">Version PDF</a></small>
           </h3>
+          <br><br><br>
         </div>
       </div>
     </div>
   </div>
+
   <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
   <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
   <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
