--- a/index.html
+++ b/index.html
@@ -53,10 +53,15 @@
       </div>
       <div class="container">
         <div class="title">
-          <h2>PPE 3</h2>
+          <h2>PPE 3 : Developpement Application Client lourd</h2>
         </div>
         <div id="buttons" class="cd-section">
           <div class="title">
+            <h3>Technologies utilisées :
+              <br>
+              <img src="nodejs.png">
+              <img src="java.png">
+            </h3>
             <h3>Fichiers :
               <br>
               <small>Cahier des charges : <a
@@ -65,17 +70,25 @@
               <small>Dossier du PPE : <a href="Rapport_PPE3.pdf">Version PDF</a></small><br>
               <small>Code : <a href="https://github.com/Worldten/Application_PPE">Lien github application</a>, <a
                   href="https://github.com/Worldten/Application_PPE_API">Lien github API</a></small><br>
-              <small>Description d'une situation professionnel : <a href="SituatioPro3.pdf">Version PDF</a></small><br>
+              <small>Description d'une situation professionnel : <a href="SituatioPro3.pdf">Version
+                  PDF</a></small><br>
             </h3>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="title">
-          <h2>PPE 4</h2>
+          <h2>PPE 4 : Developpement Application Client lourd</h2>
         </div>
         <div id="buttons" class="cd-section">
           <div class="title">
+            <h3>Technologies utilisées :
+              <br>
+              <img src="nodejs.png">
+              <img src="html-5.png">
+              <img src="css.png">
+              <img src="javascript.png">
+            </h3>
             <h3>Fichiers :
               <br>
               <small>Cahier des charges : <a
@@ -92,10 +105,15 @@
     </div>
     <div class="container">
       <div class="title">
-        <h2>Stage 1</h2>
+        <h2>Stage 1 : Assistant de responsable informatique (EDAIC)</h2>
       </div>
       <div id="buttons" class="cd-section">
         <div class="title">
+          <h3>Technologies utilisées :
+            <br>
+            <img src="windows.png">
+            <img src="icon.png">
+          </h3>
           <h3>Fichiers
             <br>
             <small>Attestation de stage : <a href="Attestation_Redfox.pdf">Version PDF</a></small><br>
@@ -106,10 +124,17 @@
     </div>
     <div class="container">
       <div class="title">
-        <h2>Stage 2</h2>
+        <h2>Stage 2 : Developpeur web front-end (REDFOX FINANCES)</h2>
       </div>
       <div id="buttons" class="cd-section">
         <div class="title">
+          <h3>Technologies utilisées :
+            <br>
+            <img src="python.png">
+            <img src="html-5.png">
+            <img src="css.png">
+            <img src="javascript.png">
+          </h3>
           <h3>Fichiers
             <br>
             <small>Attestation de stage : <a href="Attestation_Edaic.pdf">Version PDF</a></small><br>
