--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="container">
         <div class="title">
-          <h2>PPE 4 : Developpement Application Client lourd</h2>
+          <h2>PPE 4 : Developpement Application Client léger</h2>
         </div>
         <div id="buttons" class="cd-section">
           <div class="title">
