--- a/index.html
+++ b/index.html
@@ -140,9 +140,24 @@
             <small>Attestation de stage : <a href="Attestation_Edaic.pdf">Version PDF</a></small><br>
             <small>Rapport de stage : <a href="Stage_ZIMMERMANN_Thomas.pdf">Version PDF</a></small>
           </h3>
+
+        </div>
+      </div>
+      <div id="buttons" class="cd-section">
+        <div class="title">
+          <h2>Veilles</h2>
+        </div>
+        <div class="title">
+          <h3>Veille technologiques :
+            <a href="https://www.pearltrees.com/worldten/veille-technologique-computing/id25134104">Lien pearltrees</a>
+          </h3>
+          <h3>Veille juridique :
+            <a href="https://www.pearltrees.com/worldten/veille-juridique/id25135000">Lien pearltrees</a>
+          </h3>
           <br><br><br>
         </div>
       </div>
+
     </div>
   </div>
 
